fixed h2 and h3 too wide bug

--- a/styles/style.css
+++ b/styles/style.css
@@ -62,7 +62,6 @@ h1 a {
 
 h2 {
     font-size: 50px;
-    padding-top: 20px;
     transition: 0.4s ease;
 }
 
@@ -83,6 +82,12 @@ h2:hover,
 h3:hover {
     transition: 0.4s ease;
     transform: scale(1.2);
+}
+
+h2,
+h3 {
+    max-width: 600px;
+    margin: 0.83em auto;
 }
 
 section {
@@ -136,7 +141,7 @@ section {
     margin-bottom: 45px;
 }
 
-section#projects {
+#projects {
     padding-bottom: 80px;
 }
 
